# cygnet-energy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_POLICY.md  SETUP_GUIDE.md  app.py  check_status.sh  docker-compose.yml  main_app.py  pyproject.toml  setup.sh  steamlit_app.py  streamlit.py.save  streamlit_carbon_app.py
config/: config.yaml  settings.yaml
docs/: model_card.md  validation.md
experiments/: README.md  __init__.py
experiments/models/: __init__.py  spread_model.py
scripts/: benchmark.py  diagnose_data.py  diagnostic_data.py  fetch_entsoe_data.py  init_db.py  load_csv_to_db.py  smoke_check.py
src/api/: __init__.py  client.py  parser.py
src/db/: connection.py  init.sql  schema.py
src/models/: __init__.py  generation.py  modules_1_state_variables.py  modules_2_regime_detector.py  modules_3_regime_models.py  modules_4_stress_tester.py  regime_detector.py  spread_model.py
src/models/trained/: regime_detector.pkl
src/models/trained/regime_models/: metadata.pkl  regime_0.pkl  regime_1.pkl  regime_2.pkl
src/services/: carbon_service.py
src/utils/: config.py  zones.py
tests/: test_api.py  test_parser.py  test_regime_detector.py
